Updated PostBuild:  - Use $(ConfigurationName) so copy goes to right place.  - Copy ILMerge batch to TargetDir so that merge.bat works.  - Copy 3rd Party Assemblies to Working Bin directory.
Note: I recommend creating a PostBuild.bat instead, this way everyone can have their own custom configuration without needing to commit to SVN.

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -481,7 +481,14 @@
   <Target Name="AfterBuild">
   </Target>-->
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetPath)" "..\..\..\..\mediaportal\xbmc\bin\debug\plugins\windows" /Y
-</PostBuildEvent>
+    <PostBuildEvent>copy "$(ProjectDir)..\External\merge.bat" "$(TargetDir)" /Y
+copy "$(ProjectDir)..\External\ilmerge.exe" "$(TargetDir)" /Y
+xcopy "$(TargetPath)" "..\..\..\..\mediaportal\xbmc\bin\$(ConfigurationName)\plugins\windows" /Y
+xcopy "$(TargetDir)ChilkatDotNet2.dll" "..\..\..\..\mediaportal\xbmc\bin\$(ConfigurationName)" /Y
+xcopy "$(TargetDir)CookComputing.XmlRpcV2.dll" "..\..\..\..\mediaportal\xbmc\bin\$(ConfigurationName)" /Y
+xcopy "$(TargetDir)ChilkatDotNet2.dll" "..\..\..\..\mediaportal\xbmc\bin\$(ConfigurationName)" /Y
+xcopy "$(TargetDir)HtmlAgilityPack.dll" "..\..\..\..\mediaportal\xbmc\bin\$(ConfigurationName)" /Y
+xcopy "$(TargetDir)ICSharpCode.SharpZipLib.dll" "..\..\..\..\mediaportal\xbmc\bin\$(ConfigurationName)" /Y
+xcopy "$(TargetDir)SubtitleDownloader.dll" "..\..\..\..\mediaportal\xbmc\bin\$(ConfigurationName)" /Y</PostBuildEvent>
   </PropertyGroup>
 </Project>
