--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -424,6 +424,7 @@
     <Content Include="Resources\Languages\cs.xml" />
     <Content Include="Resources\Languages\da.xml" />
     <Content Include="Resources\Languages\de.xml" />
+    <Content Include="Resources\Languages\el.xml" />
     <Content Include="Resources\Languages\en%28us%29.xml" />
     <Content Include="Resources\Languages\es.xml" />
     <Content Include="Resources\Languages\fr.xml" />
@@ -435,6 +436,7 @@
     <Content Include="Resources\Languages\pl.xml" />
     <Content Include="Resources\Languages\pt_pt.xml" />
     <Content Include="Resources\Languages\ru.xml" />
+    <Content Include="Resources\Languages\ru_utf8.xml" />
     <Content Include="Resources\Languages\sv.xml" />
     <None Include="Resources\Images\tv_series_logo_noreflection.png" />
     <Compile Include="Properties\VersionInfo.cs" />
