Further progress on the Import Wizard, still needs polishing, especially: - Beautify (+ proper icons) - Cancel/Finish buttons not working 100% - Make manual episode matcher optional - Add/find easy way to get unsecussful parsed files, but manually oked, to go through to the ep matcher - Make ep-matching possible by non season/ep indexes (such as airdates...should be easy, but depends on 3) - Be smarter about ep matching, not just statically use predefined fields but use any parsed fields we get

--- a/branch/ImportWizard/MP-TVSeries.csproj
+++ b/branch/ImportWizard/MP-TVSeries.csproj
@@ -349,6 +349,9 @@
       <DependentUpon>ChooseFromSelection.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\ImportPanelEpID.resx">
+      <DependentUpon>ImportPanelEpID.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Configuration\DeleteDialog.resx">
       <DependentUpon>DeleteDialog.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -474,6 +477,12 @@
     <Content Include="Resources\Languages\ru_utf8.xml" />
     <Content Include="Resources\Languages\sv.xml" />
     <None Include="Resources\Images\tv_series_logo_noreflection.png" />
+    <Compile Include="Configuration\ImportPanelEpID.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Configuration\ImportPanelEpID.Designer.cs">
+      <DependentUpon>ImportPanelEpID.cs</DependentUpon>
+    </Compile>
     <Compile Include="Configuration\ImportPanelParsing.cs">
       <SubType>UserControl</SubType>
     </Compile>
